--- a/libfsxfs/Makefile.am
+++ b/libfsxfs/Makefile.am
@@ -45,6 +45,7 @@ libfsxfs_la_SOURCES = \
 	libfsxfs_extent.c libfsxfs_extent.h \
 	libfsxfs_extent_btree.c libfsxfs_extent_btree.h \
 	libfsxfs_extent_list.c libfsxfs_extent_list.h \
+	libfsxfs_extents.c libfsxfs_extents.h \
 	libfsxfs_extern.h \
 	libfsxfs_file_entry.c libfsxfs_file_entry.h \
 	libfsxfs_file_system.c libfsxfs_file_system.h \
