Worked on tests

--- a/.gitignore
+++ b/.gitignore
@@ -145,6 +145,9 @@ stamp-h[1-9]
 /tests/fsxfs_test_notify
 /tests/fsxfs_test_superblock
 /tests/fsxfs_test_support
+/tests/fsxfs_test_tools_info_handle
+/tests/fsxfs_test_tools_output
+/tests/fsxfs_test_tools_signal
 /tests/fsxfs_test_volume
 /tests/input
 /tests/tmp*
