--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -15,6 +15,8 @@ AM_CPPFLAGS = \
 	@LIBFDATA_CPPFLAGS@ \
 	@LIBFDATETIME_CPPFLAGS@ \
 	@LIBFGUID_CPPFLAGS@ \
+	@LIBCRYPTO_CPPFLAGS@ \
+	@LIBHMAC_CPPFLAGS@ \
 	@PTHREAD_CPPFLAGS@ \
 	@LIBFSXFS_DLL_IMPORT@
 
@@ -25,6 +27,7 @@ endif
 
 TESTS = \
 	test_library.sh \
+	test_tools.sh \
 	test_fsxfsinfo.sh \
 	$(TESTS_PYFSXFS)
 
@@ -34,7 +37,8 @@ check_SCRIPTS = \
 	test_library.sh \
 	test_manpage.sh \
 	test_python_module.sh \
-	test_runner.sh
+	test_runner.sh \
+	test_tools.sh
 
 EXTRA_DIST = \
 	$(check_SCRIPTS)
@@ -56,6 +60,9 @@ check_PROGRAMS = \
 	fsxfs_test_notify \
 	fsxfs_test_superblock \
 	fsxfs_test_support \
+	fsxfs_test_tools_info_handle \
+	fsxfs_test_tools_output \
+	fsxfs_test_tools_signal \
 	fsxfs_test_volume
 
 fsxfs_test_block_directory_footer_SOURCES = \
@@ -287,6 +294,54 @@ fsxfs_test_support_LDADD = \
 	@LIBCNOTIFY_LIBADD@ \
 	@LIBCLOCALE_LIBADD@ \
 	@LIBCDATA_LIBADD@ \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
+
+fsxfs_test_tools_info_handle_SOURCES = \
+	../fsxfstools/digest_hash.c ../fsxfstools/digest_hash.h \
+	../fsxfstools/info_handle.c ../fsxfstools/info_handle.h \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_memory.c fsxfs_test_memory.h \
+	fsxfs_test_tools_info_handle.c \
+	fsxfs_test_unused.h
+
+fsxfs_test_tools_info_handle_LDADD = \
+	@LIBHMAC_LIBADD@ \
+	@LIBFGUID_LIBADD@ \
+	@LIBFDATETIME_LIBADD@ \
+	@LIBBFIO_LIBADD@ \
+	@LIBCPATH_LIBADD@ \
+	@LIBCFILE_LIBADD@ \
+	@LIBUNA_LIBADD@ \
+	@LIBCSPLIT_LIBADD@ \
+	@LIBCNOTIFY_LIBADD@ \
+	@LIBCLOCALE_LIBADD@ \
+	@LIBCDATA_LIBADD@ \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCRYPTO_LIBADD@ \
+	@LIBDL_LIBADD@
+
+fsxfs_test_tools_output_SOURCES = \
+	../fsxfstools/fsxfstools_output.c ../fsxfstools/fsxfstools_output.h \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_tools_output.c \
+	fsxfs_test_unused.h
+
+fsxfs_test_tools_output_LDADD = \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
+
+fsxfs_test_tools_signal_SOURCES = \
+	../fsxfstools/fsxfstools_signal.c ../fsxfstools/fsxfstools_signal.h \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_tools_signal.c \
+	fsxfs_test_unused.h
+
+fsxfs_test_tools_signal_LDADD = \
 	../libfsxfs/libfsxfs.la \
 	@LIBCERROR_LIBADD@
 
