--- a/msvscpp/fsxfs_test_tools_info_handle/fsxfs_test_tools_info_handle.vcproj
+++ b/msvscpp/fsxfs_test_tools_info_handle/fsxfs_test_tools_info_handle.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="fsxfs_test_block_directory_header"
-	ProjectGUID="{BA991BE2-B36A-4554-9417-7A91279F34A4}"
-	RootNamespace="fsxfs_test_block_directory_header"
+	Name="fsxfs_test_tools_info_handle"
+	ProjectGUID="{58F2B200-BBC3-43F0-AE28-124C714A7E00}"
+	RootNamespace="fsxfs_test_tools_info_handle"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -176,11 +176,19 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\fsxfs_test_block_directory_header.c"
+				RelativePath="..\..\fsxfstools\digest_hash.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\fsxfstools\info_handle.c"
 				>
 			</File>
 			<File
 				RelativePath="..\..\tests\fsxfs_test_memory.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\fsxfs_test_tools_info_handle.c"
 				>
 			</File>
 		</Filter>
@@ -190,11 +198,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\tests\fsxfs_test_libcerror.h"
+				RelativePath="..\..\fsxfstools\digest_hash.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\tests\fsxfs_test_libfsxfs.h"
+				RelativePath="..\..\fsxfstools\info_handle.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\tests\fsxfs_test_libcerror.h"
 				>
 			</File>
 			<File
