--- a/include/libfsxfs/types.h.in
+++ b/include/libfsxfs/types.h.in
@@ -201,6 +201,7 @@ typedef int64_t off64_t;
 
 /* The following type definitions hide internal data structures
  */
+typedef intptr_t libfsxfs_extended_attribute_t;
 typedef intptr_t libfsxfs_file_entry_t;
 typedef intptr_t libfsxfs_volume_t;
 
