--- a/msvscpp/libfsxfs/libfsxfs.vcproj
+++ b/msvscpp/libfsxfs/libfsxfs.vcproj
@@ -174,6 +174,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libfsxfs\libfsxfs_attribute_values.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfsxfs\libfsxfs_attributes_table.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfsxfs\libfsxfs_attributes_table_header.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libfsxfs\libfsxfs_block_data_handle.c"
 				>
 			</File>
@@ -227,6 +239,10 @@
 			</File>
 			<File
 				RelativePath="..\..\libfsxfs\libfsxfs_error.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfsxfs\libfsxfs_extended_attribute.c"
 				>
 			</File>
 			<File
@@ -296,6 +312,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\..\libfsxfs\fsxfs_attributes.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libfsxfs\fsxfs_block_directory.h"
 				>
 			</File>
@@ -313,6 +333,18 @@
 			</File>
 			<File
 				RelativePath="..\..\libfsxfs\fsxfs_superblock.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfsxfs\libfsxfs_attribute_values.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfsxfs\libfsxfs_attributes_table.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfsxfs\libfsxfs_attributes_table_header.h"
 				>
 			</File>
 			<File
@@ -373,6 +405,10 @@
 			</File>
 			<File
 				RelativePath="..\..\libfsxfs\libfsxfs_error.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libfsxfs\libfsxfs_extended_attribute.h"
 				>
 			</File>
 			<File
