--- a/pyfsxfs-python2/Makefile.am
+++ b/pyfsxfs-python2/Makefile.am
@@ -25,6 +25,8 @@ BUILT_SOURCES = \
 	pyfsxfs.c pyfsxfs.h \
 	pyfsxfs_datetime.c pyfsxfs_datetime.h \
 	pyfsxfs_error.c pyfsxfs_error.h \
+	pyfsxfs_extended_attribute.c pyfsxfs_extended_attribute.h \
+	pyfsxfs_extended_attributes.c pyfsxfs_extended_attributes.h \
 	pyfsxfs_file_entries.c pyfsxfs_file_entries.h \
 	pyfsxfs_file_entry.c pyfsxfs_file_entry.h \
 	pyfsxfs_file_object_io_handle.c pyfsxfs_file_object_io_handle.h \
