--- a/pyfsxfs/Makefile.am
+++ b/pyfsxfs/Makefile.am
@@ -18,6 +18,8 @@ pyfsxfs_la_SOURCES = \
 	pyfsxfs.c pyfsxfs.h \
 	pyfsxfs_datetime.c pyfsxfs_datetime.h \
 	pyfsxfs_error.c pyfsxfs_error.h \
+	pyfsxfs_extended_attribute.c pyfsxfs_extended_attribute.h \
+	pyfsxfs_extended_attributes.c pyfsxfs_extended_attributes.h \
 	pyfsxfs_file_entries.c pyfsxfs_file_entries.h \
 	pyfsxfs_file_entry.c pyfsxfs_file_entry.h \
 	pyfsxfs_file_object_io_handle.c pyfsxfs_file_object_io_handle.h \
