--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -1,4 +1,5 @@
 MSVSCPP_FILES = \
+	fsxfs_test_attributes_block_header/fsxfs_test_attributes_block_header.vcproj \
 	fsxfs_test_attributes_table/fsxfs_test_attributes_table.vcproj \
 	fsxfs_test_attributes_table_header/fsxfs_test_attributes_table_header.vcproj \
 	fsxfs_test_block_directory_footer/fsxfs_test_block_directory_footer.vcproj \
