--- a/libfsxfs.ini
+++ b/libfsxfs.ini
@@ -8,7 +8,7 @@ features: ["debug_output"]
 
 [library]
 description: "Library to support the X File System (XFS) format"
-public_types: ["file_entry", "volume"]
+public_types: ["extended_attribute", "file_entry", "volume"]
 
 [tools]
 build_dependencies: ["crypto"]
