--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -46,6 +46,7 @@ EXTRA_DIST = \
 	$(check_SCRIPTS)
 
 check_PROGRAMS = \
+	fsxfs_test_attributes_block_header \
 	fsxfs_test_attributes_table \
 	fsxfs_test_attributes_table_header \
 	fsxfs_test_block_directory_footer \
@@ -68,6 +69,18 @@ check_PROGRAMS = \
 	fsxfs_test_tools_output \
 	fsxfs_test_tools_signal \
 	fsxfs_test_volume
+
+fsxfs_test_attributes_block_header_SOURCES = \
+	fsxfs_test_attributes_block_header.c \
+	fsxfs_test_libcerror.h \
+	fsxfs_test_libfsxfs.h \
+	fsxfs_test_macros.h \
+	fsxfs_test_memory.c fsxfs_test_memory.h \
+	fsxfs_test_unused.h
+
+fsxfs_test_attributes_block_header_LDADD = \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@
 
 fsxfs_test_attributes_table_SOURCES = \
 	fsxfs_test_attributes_table.c \
