--- a/libfsxfs/libfsxfs_definitions.h.in
+++ b/libfsxfs/libfsxfs_definitions.h.in
@@ -107,6 +107,8 @@ enum LIBFSXFS_FORK_TYPES
 	LIBFSXFS_FORK_TYPE_BTREE					= 3
 };
 
+#define LIBFSXFS_DIRECTORY_LEAF_OFFSET					0x800000000UL
+
 #define LIBFSXFS_MAXIMUM_RECURSION_DEPTH				256
 
 #endif /* !defined( _LIBFSXFS_INTERNAL_DEFINITIONS_H ) */
