Worked on tools

--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,7 @@ stamp-h[1-9]
 /pyfsxfs-python[23]/*.[ch]
 /fsxfstools/*.exe
 /fsxfstools/fsxfsinfo
+/fsxfstools/fsxfsmount
 /tests/*.exe
 /tests/fsxfs_test_attribute_values
 /tests/fsxfs_test_attributes_leaf_block_header
