--- a/manuals/Makefile.am
+++ b/manuals/Makefile.am
@@ -1,9 +1,10 @@
 man_MANS = \
 	fsxfsinfo.1 \
+	fsxfsmount.1 \
 	libfsxfs.3
 
 EXTRA_DIST = \
-	fsxfsinfo.1 \
+	fsxfsmount.1 \
 	libfsxfs.3
 
 MAINTAINERCLEANFILES = \
