--- a/fsxfstools/Makefile.am
+++ b/fsxfstools/Makefile.am
@@ -16,13 +16,15 @@ AM_CPPFLAGS = \
 	@LIBFGUID_CPPFLAGS@ \
 	@LIBHMAC_CPPFLAGS@ \
 	@LIBCRYPTO_CPPFLAGS@ \
+	@LIBFUSE_CPPFLAGS@ \
 	@PTHREAD_CPPFLAGS@ \
 	@LIBFSXFS_DLL_IMPORT@
 
 AM_LDFLAGS = @STATIC_LDFLAGS@
 
 bin_PROGRAMS = \
-	fsxfsinfo
+	fsxfsinfo \
+	fsxfsmount
 
 fsxfsinfo_SOURCES = \
 	digest_hash.c digest_hash.h \
@@ -58,6 +60,41 @@ fsxfsinfo_LDADD = \
 	@LIBCDATA_LIBADD@ \
 	@LIBCNOTIFY_LIBADD@ \
 	@LIBCLOCALE_LIBADD@ \
+	../libfsxfs/libfsxfs.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBINTL@
+
+fsxfsmount_SOURCES = \
+	fsxfsmount.c \
+	fsxfstools_getopt.c fsxfstools_getopt.h \
+	fsxfstools_i18n.h \
+	fsxfstools_libbfio.h \
+	fsxfstools_libcdata.h \
+	fsxfstools_libcerror.h \
+	fsxfstools_libclocale.h \
+	fsxfstools_libcnotify.h \
+	fsxfstools_libcpath.h \
+	fsxfstools_libfsxfs.h \
+	fsxfstools_libuna.h \
+	fsxfstools_output.c fsxfstools_output.h \
+	fsxfstools_signal.c fsxfstools_signal.h \
+	fsxfstools_unused.h \
+	mount_dokan.c mount_dokan.h \
+	mount_file_entry.c mount_file_entry.h \
+	mount_file_system.c mount_file_system.h \
+	mount_fuse.c mount_fuse.h \
+	mount_handle.c mount_handle.h
+
+fsxfsmount_LDADD = \
+	@LIBFUSE_LIBADD@ \
+	@LIBBFIO_LIBADD@ \
+	@LIBCPATH_LIBADD@ \
+	@LIBCFILE_LIBADD@ \
+	@LIBUNA_LIBADD@ \
+	@LIBCSPLIT_LIBADD@ \
+	@LIBCNOTIFY_LIBADD@ \
+	@LIBCLOCALE_LIBADD@ \
+	@LIBCDATA_LIBADD@ \
 	../libfsxfs/libfsxfs.la \
 	@LIBCERROR_LIBADD@ \
 	@LIBINTL@
