--- a/libfsxfs.ini
+++ b/libfsxfs.ini
@@ -13,7 +13,22 @@ public_types: ["extended_attribute", "file_entry", "volume"]
 [tools]
 build_dependencies: ["crypto"]
 description: "Several tools for reading X File System (XFS) volumes"
-names: ["fsxfsinfo"]
+names: ["fsxfsinfo", "fsxfsmount"]
+
+[mount_tool]
+features: ["offset"]
+base_type: "volume"
+file_entry_access_time_type: "nano_posix_time"
+file_entry_creation_time_type: "nano_posix_time"
+file_entry_inode_change_time_type: "nano_posix_time"
+file_entry_modification_time_type: "nano_posix_time"
+file_entry_type: "file_entry"
+file_system_type: "volume"
+mounted_description: "a file system contained in the volume"
+source: "image.raw"
+source_description: "a XFS volume container"
+source_description_long: "a X File System (XFS) volume"
+source_type: "container"
 
 [tests]
 profiles: ["libfsxfs", "pyfsxfs", "fsxfsinfo", "fsxfsinfo_fs"]
