--- a/libfsxfs.ini
+++ b/libfsxfs.ini
@@ -11,7 +11,7 @@ description: "Library to support the X File System (XFS) format"
 public_types: ["extended_attribute", "file_entry", "volume"]
 
 [tools]
-build_dependencies: ["crypto"]
+build_dependencies: ["crypto", "fuse"]
 description: "Several tools for reading X File System (XFS) volumes"
 names: ["fsxfsinfo", "fsxfsmount"]
 
@@ -24,11 +24,11 @@ file_entry_inode_change_time_type: "nano_posix_time"
 file_entry_modification_time_type: "nano_posix_time"
 file_entry_type: "file_entry"
 file_system_type: "volume"
-mounted_description: "a file system contained in the volume"
+mounted_description: "a file system contained in the XFS volume"
 source: "image.raw"
-source_description: "a XFS volume container"
+source_description: "a XFS volume"
 source_description_long: "a X File System (XFS) volume"
-source_type: "container"
+source_type: "volume"
 
 [tests]
 profiles: ["libfsxfs", "pyfsxfs", "fsxfsinfo", "fsxfsinfo_fs"]
