--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  pypi_token:
+  PYPI_TOKEN:
     secure: VHuZiUWgTqTciKE2nsv/LqvMwixIzxK0XxJ4pMXdWQefh1E0sU1k8ItapG3Ncyf93ysByT+COruu9C8/TrZh5T5pMdtUd0bXhivpMmuR6CXo3zieR3V+D7pyh2UF1Vaa9aqPMq0otIPqAQMWLemA2KZCB9TdgihLXHhHbG6Rn4k/z8IrmsXhnYJ6GeZyeKvnbUE+AZ86Zb61pAsCRMUIegh7UYLgVe66LriFXmS+7AfwszA9AvMjcTX7nFUjgnSrttSlYP9haCIvtBR+LFnY1G2a4gRPHgPhz4eX7pdTUQI=
   matrix:
   - TARGET: vs2008
@@ -80,7 +80,7 @@ environment:
   - TARGET: python39-x64
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: macos
-    PYTHON: "/usr/local/opt/python@3.9/bin/python3"
+    PYTHON: "/usr/local/opt/python@3.10/bin/python3"
     HOMEBREW_NO_INSTALL_CLEANUP: 1
     CFLAGS: "-I/usr/local/include"
     LDFLAGS: "-L/usr/local/lib"
@@ -275,5 +275,5 @@ artifacts:
 deploy_script:
 - ps: If ($env:APPVEYOR_REPO_TAG -eq "true" -and $isWindows -and $env:BUILD_ENVIRONMENT -eq "python") {
     Invoke-Expression "${env:PYTHON} -m twine upload dist/*.whl --username __token__ --password ${env:PYPI_TOKEN} --skip-existing" }
-- sh: if test ${APPVEYOR_REPO_TAG} = "true" && ${BUILD_ENVIRONMENT} = "python"; then twine upload dist/*.whl --username __token__ --password ${PYPI_TOKEN} --skip-existing; fi
+- sh: if test ${APPVEYOR_REPO_TAG} = "true" && test ${BUILD_ENVIRONMENT} = "python"; then ${PYTHON} -m twine upload dist/*.whl --username __token__ --password ${PYPI_TOKEN} --skip-existing; fi
 
