--- a/include/libfsxfs.h.in
+++ b/include/libfsxfs.h.in
@@ -696,6 +696,27 @@ int libfsxfs_file_entry_get_size(
      size64_t *size,
      libfsxfs_error_t **error );
 
+/* Retrieves the number of extents
+ * Returns 1 if successful or -1 on error
+ */
+LIBFSXFS_EXTERN \
+int libfsxfs_file_entry_get_number_of_extents(
+     libfsxfs_file_entry_t *file_entry,
+     int *number_of_extents,
+     libfsxfs_error_t **error );
+
+/* Retrieves a specific extent
+ * Returns 1 if successful or -1 on error
+ */
+LIBFSXFS_EXTERN \
+int libfsxfs_file_entry_get_extent_by_index(
+     libfsxfs_file_entry_t *file_entry,
+     int extent_index,
+     off64_t *extent_offset,
+     size64_t *extent_size,
+     uint32_t *extent_flags,
+     libfsxfs_error_t **error );
+
 /* -------------------------------------------------------------------------
  * Extended attribute functions
  * ------------------------------------------------------------------------- */
