--- a/dpkg/control
+++ b/dpkg/control
@@ -1,7 +1,7 @@
 Source: libfsxfs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, libssl-dev, python-dev, python-setuptools, python3-dev, python3-setuptools, libfuse-dev
+Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, libssl-dev, python3-dev, python3-setuptools, libfuse-dev
 Standards-Version: 4.1.4
 Section: libs
 Homepage: https://github.com/libyal/libfsxfs
@@ -45,23 +45,6 @@ Architecture: any
 Depends: libfsxfs-tools (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libfsxfs-tools
  Debugging symbols for libfsxfs-tools.
-
-Package: libfsxfs-python
-Section: python
-Architecture: any
-Depends: libfsxfs (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Conflicts: python-libfsxfs
-Replaces: python-libfsxfs
-Suggests: libfsxfs-python-dbg
-Description: Python 2 bindings for libfsxfs
- Python 2 bindings for libfsxfs.
-
-Package: libfsxfs-python-dbg
-Section: debug
-Architecture: any
-Depends: libfsxfs-python (= ${binary:Version}), ${misc:Depends}
-Description: Debugging symbols for libfsxfs-python
- Debugging symbols for libfsxfs-python.
 
 Package: libfsxfs-python3
 Section: python
