--- a/libfsxfs/libfsxfs_definitions.h.in
+++ b/libfsxfs/libfsxfs_definitions.h.in
@@ -102,6 +102,7 @@ enum LIBFSXFS_SECONDARY_FEATURE_FLAGS
  */
 enum LIBFSXFS_FORK_TYPES
 {
+	LIBFSXFS_FORK_TYPE_DEVICE					= 0,
 	LIBFSXFS_FORK_TYPE_INLINE_DATA					= 1,
 	LIBFSXFS_FORK_TYPE_EXTENTS					= 2,
 	LIBFSXFS_FORK_TYPE_BTREE					= 3
