Applied updates and worked on API

--- a/include/libfsxfs.h.in
+++ b/include/libfsxfs.h.in
@@ -457,6 +457,16 @@ int libfsxfs_file_entry_get_group_identifier(
      uint32_t *group_identifier,
      libfsxfs_error_t **error );
 
+/* Retrieves the device identifier
+ * This value is retrieved from the inode
+ * Returns 1 if successful, 0 if not available or -1 on error
+ */
+LIBFSXFS_EXTERN \
+int libfsxfs_file_entry_get_device_identifier(
+     libfsxfs_file_entry_t *file_entry,
+     uint32_t *device_identifier,
+     libfsxfs_error_t **error );
+
 /* Retrieves the device number
  * This value is retrieved from the inode
  * Returns 1 if successful, 0 if not available or -1 on error
