--- a/pyfsxfs-python2/Makefile.am
+++ b/pyfsxfs-python2/Makefile.am
@@ -66,8 +66,8 @@ MAINTAINERCLEANFILES = \
 	Makefile.in
 
 clean-local:
-	/bin/rm -f pyfsxfs*.[ch]
+	-rm -f pyfsxfs*.[ch]
 
 distclean: clean
-	/bin/rm -f Makefile
+	-rm -f Makefile
 
