--- a/configure.ac
+++ b/configure.ac
@@ -2,13 +2,14 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libfsxfs],
- [20230912],
+ [20231027],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
  [include/libfsxfs.h.in])
 
 AM_INIT_AUTOMAKE([gnu 1.6 tar-ustar])
+AM_EXTRA_RECURSIVE_TARGETS([sources splint])
 
 AC_CONFIG_MACRO_DIR([m4])
 
@@ -213,6 +214,7 @@ AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([libfsxfs/libfsxfs.rc])
 AC_CONFIG_FILES([libfsxfs.pc])
 AC_CONFIG_FILES([libfsxfs.spec])
+AC_CONFIG_FILES([setup.cfg])
 dnl Generate a source configuration file
 AC_CONFIG_HEADERS([common/config.h])
 
