Changes for cygfuse, fuse3 and Dokan support

--- a/libfsxfs.ini
+++ b/libfsxfs.ini
@@ -15,8 +15,12 @@ build_dependencies: ["crypto", "fuse"]
 description: "Several tools for reading X File System (XFS) volumes"
 names: ["fsxfsinfo", "fsxfsmount"]
 
+[info_tool]
+source_description: "a X File System (XFS) volume"
+source_type: "volume"
+
 [mount_tool]
-features: ["offset"]
+features: ["extended_attributes", "offset", "symbolic_link"]
 base_type: "volume"
 file_entry_access_time_type: "nano_posix_time"
 file_entry_creation_time_type: "nano_posix_time"
