--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -21,6 +21,7 @@ MSVSCPP_FILES = \
 	fsxfs_test_superblock/fsxfs_test_superblock.vcproj \
 	fsxfs_test_support/fsxfs_test_support.vcproj \
 	fsxfs_test_tools_info_handle/fsxfs_test_tools_info_handle.vcproj \
+	fsxfs_test_tools_mount_path_string/fsxfs_test_tools_mount_path_string.vcproj \
 	fsxfs_test_tools_output/fsxfs_test_tools_output.vcproj \
 	fsxfs_test_tools_signal/fsxfs_test_tools_signal.vcproj \
 	fsxfs_test_volume/fsxfs_test_volume.vcproj \
