--- a/libfsxfs.ini
+++ b/libfsxfs.ini
@@ -4,10 +4,11 @@ status: "experimental"
 year_of_creation: "2020"
 data_format: "X File System (XFS)"
 documentation_url: "https://github.com/libyal/libfsxfs/tree/main/documentation"
-features: ["debug_output"]
+features: ["debug_output", "ossfuzz", "python_bindings", "tools"]
 
 [library]
 description: "Library to support the X File System (XFS) format"
+features: ["pthread", "wide_character_type"]
 public_types: ["extended_attribute", "file_entry", "volume"]
 
 [tools]
