Add support for XFS bigtime

--- a/libfsxfs/libfsxfs_definitions.h.in
+++ b/libfsxfs/libfsxfs_definitions.h.in
@@ -98,6 +98,13 @@ enum LIBFSXFS_SECONDARY_FEATURE_FLAGS
 	LIBFSXFS_SECONDARY_FEATURE_FLAG_FILE_TYPE			= 0x00000200UL
 };
 
+/* The incompatible feature flags (v5 only)
+ */
+enum LIBFSXFS_INCOMPAT_FEATURE_FLAGS
+{
+	LIBFSXFS_INCOMPAT_FEATURE_FLAG_BIGTIME				= 0x00000008UL
+};
+
 /* The fork types
  */
 enum LIBFSXFS_FORK_TYPES
