--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 permissions: read-all
 jobs:
   build_ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -30,7 +30,7 @@ jobs:
           compiler: 'gcc'
           configure_options: '--enable-static-executables=yes --enable-multi-threading-support=no'
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Install build dependencies
       run: |
         sudo apt-get -y install autoconf automake autopoint build-essential git libfuse3-dev libssl-dev libtool pkg-config
@@ -46,7 +46,7 @@ jobs:
       run: |
         tests/runtests.sh
   build_dist:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -54,7 +54,7 @@ jobs:
           compiler: 'gcc'
           configure_options: ''
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Install build dependencies
       run: |
         sudo apt-get -y install autoconf automake autopoint build-essential git libfuse3-dev libssl-dev libtool pkg-config
@@ -70,7 +70,7 @@ jobs:
       run: |
         make distcheck
   build_fuse_ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -78,7 +78,7 @@ jobs:
           compiler: 'gcc'
           configure_options: ''
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Install build dependencies
       run: |
         sudo apt-get -y install autoconf automake autopoint build-essential git libfuse3-dev libssl-dev libtool pkg-config libfuse-dev
@@ -94,7 +94,7 @@ jobs:
       run: |
         tests/runtests.sh
   build_fuse3_ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -102,7 +102,7 @@ jobs:
           compiler: 'gcc'
           configure_options: ''
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Install build dependencies
       run: |
         sudo apt-get -y install autoconf automake autopoint build-essential git libfuse3-dev libssl-dev libtool pkg-config libfuse3-dev
@@ -118,7 +118,7 @@ jobs:
       run: |
         tests/runtests.sh
   build_python_ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -127,7 +127,7 @@ jobs:
           configure_options: '--enable-python'
           python_version: ''
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Install build dependencies
       run: |
         sudo add-apt-repository universe &&
@@ -147,7 +147,7 @@ jobs:
       run: |
         tests/runtests.sh
   build_setup_py_ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -156,7 +156,7 @@ jobs:
           configure_options: ''
           python-version: '3.10'
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
@@ -175,7 +175,7 @@ jobs:
       run: |
         python setup.py build
   coverage_ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -186,7 +186,7 @@ jobs:
           compiler: 'gcc'
           configure_options: '--enable-wide-character-type'
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Install build dependencies
       run: |
         sudo apt-get -y install autoconf automake autopoint build-essential git libfuse3-dev libssl-dev libtool pkg-config
@@ -207,7 +207,7 @@ jobs:
           (cd ${DIRECTORY} && find . -maxdepth 1 -name \*.gcno -type f -exec gcov -pb {} \;) \
         done
     - name: Upload coverage report to Codecov
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v5
       with:
         name: linux-${{ matrix.architecture }}-gcc-no-optimization
         token: ${{ secrets.CODECOV_TOKEN }}
